/**
 * Produto do Factory Method: todo inimigo, de qualquer localizacao,
 * sabe atacar o jogador.
 */
public interface Inimigo {
    void atacar(Jogador jogador);
}
